--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contato/index">Cadastrar Contato</a>
+            <a class="nav-link" href="/contato/index">Cadastrar Contato</a>
           </li>
           <% if(user) {%> 
 
